init: rewrite configuration backend w/ units

--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -2,11 +2,22 @@
 
 add_subdirectory(bootstrapper)
 
-add_executable(init main.cpp)
+find_package(tomlplusplus REQUIRED)
+
+add_executable(init
+    main.cpp
+    unit/unit.cpp
+    unit/mount.cpp
+    unit/path.cpp
+    unit/service.cpp
+    unit/target.cpp
+    unit/symlink.cpp
+    parser.cpp
+)
 target_link_libraries(init
     PRIVATE
         mos::argparse
-        mos::config
         mos::include
+        tomlplusplus::tomlplusplus
 )
 add_to_initrd(TARGET init /programs)
