C++: refactor console_t -> Console

--- a/userspace/drivers/acpi-daemon/CMakeLists.txt
+++ b/userspace/drivers/acpi-daemon/CMakeLists.txt
@@ -1,8 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+return() # this code is broken
+
 if (NOT MOS_ARCH STREQUAL "x86_64")
     message(WARNING "ACPI daemon is only supported on x86_64")
-    return()
 endif()
 
 include(uACPI/uacpi.cmake)
