--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -1,6 +1,10 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_subdirectory(bootstrapper)
+if (NOT INIT_NO_BOOTSTRAPPER)
+    add_subdirectory(bootstrapper)
+else()
+    message(STATUS "Skipping bootstrapper")
+endif()
 
 find_package(tomlplusplus REQUIRED)
 
@@ -13,11 +17,19 @@ add_executable(init
     unit/target.cpp
     unit/symlink.cpp
     parser.cpp
+    ServiceManager.cpp
+    rpc/rpc.cpp
 )
+
 target_link_libraries(init
     PRIVATE
         mos::argparse
         mos::include
         tomlplusplus::tomlplusplus
+        mos::librpc-server
+        mos::rpc-protocols
 )
+
+target_include_directories(init PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_to_initrd(TARGET init /programs)
