--- a/userspace/drivers/fs/CMakeLists.txt
+++ b/userspace/drivers/fs/CMakeLists.txt
@@ -3,4 +3,7 @@
 add_subdirectory(ext4)
 
 add_executable(mount mount.c)
+add_executable(umount umount.c)
+
 add_to_initrd(TARGET mount /programs)
+add_to_initrd(TARGET umount /programs)
