--- a/userspace/initrd/config/bits/services.toml
+++ b/userspace/initrd/config/bits/services.toml
@@ -8,7 +8,7 @@ exec = "/initrd/drivers/device-manager"
 [blockdev-manager.service]
 type = "service"
 description = "Block device manager"
-depends_on = ["dev.path", "device-manager.service"]
+depends_on = ["dev-block.path", "device-manager.service"]
 part_of = ["normal.target"]
 exec = "/initrd/drivers/blockdev-manager"
 
@@ -17,4 +17,3 @@ type = "service"
 description = "Ext4 file system driver"
 exec = "/initrd/drivers/ext4fs"
 depends_on = ["blockdev-manager.service"]
-part_of = ["normal.target"]
