--- a/userspace/initrd/config/bits/dev.toml
+++ b/userspace/initrd/config/bits/dev.toml
@@ -2,3 +2,9 @@
 type = "path"
 description = "Create dev directory"
 path = "/dev"
+
+[dev-block.path]
+type = "path"
+description = "Create /dev/block directory"
+path = "/dev/block"
+depends = ["dev.path"]
