--- a/userspace/initrd/config/bits/include.toml
+++ b/userspace/initrd/config/bits/include.toml
@@ -2,5 +2,4 @@
 type = "symlink"
 description = "Symbolic link /include to /initrd/include"
 part_of = ["normal.target"]
-link = "/include"
-target = "/initrd/include"
+options = { link = "/include", target = "/initrd/include" }
