--- a/userspace/initrd/config/bits/virtiod.toml
+++ b/userspace/initrd/config/bits/virtiod.toml
@@ -1,18 +1,10 @@
 [virtio.device-template]
 type = "device"
-template_args = ["device_type"]
-description = "VirtIO $device_type Device"
+template_args = ["type"]
+description = "VirtIO $type Device"
+[virtio.device-template.options]
 driver = "/initrd/drivers/virtiod"
-driver_args = ["--device_type", "$device_type"]
-
-
-[virtiod.service-template]
-type = "service"
-template_args = ["vendor_id", "device_id", "location", "mmio_base"]
-description = "VirtIO Device Driver for $vendor_id:$device_id"
-depends_on = ["device-manager.service"]
-exec = [
-    "/initrd/drivers/virtiod",
+driver_args = [
     "--vendor_id",
     "$vendor_id",
     "--device_id",
@@ -21,4 +13,6 @@ exec = [
     "$location",
     "--mmio_base",
     "$mmio_base",
+    "--device_type",
+    "$type",
 ]
