riscv64: fix build

--- a/kernel/arch/riscv64/CMakeLists.txt
+++ b/kernel/arch/riscv64/CMakeLists.txt
@@ -5,6 +5,7 @@ add_kernel_source(
     riscv64_platform_api.cpp
     sbi/sbi-call.cpp
     mm/mm.cpp
+    cpu/ap.cpp
     cpu/trap.cpp
     cpu/plic.cpp
     cpu/interrupt.S
