--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(fs)
 
 add_subdirectory(device-manager)
 add_subdirectory(pci-daemon)
+add_subdirectory(networkd)
 
 add_subdirectory(libdma)
 
