--- a/userspace/initrd/config/bits/base.toml
+++ b/userspace/initrd/config/bits/base.toml
@@ -1,34 +1,30 @@
+#:schema ../config-schema.json
+
 [base.target]
-type = "target"
 description = "Base System"
 
 [bin.symlink]
-type = "symlink"
 description = "Symbolic link /bin to /initrd/bin"
 part_of = ["base.target"]
 options = { link = "/bin", target = "/initrd/bin" }
 
 [etc.symlink]
-type = "symlink"
 description = "Symbolic link /etc to /initrd/etc"
 part_of = ["base.target"]
-options = { link = "/etc", target = "/initrd/etc" }
+options = { link = "/etc", target = "/initrd/etc"}
 
 [tmp.path]
-type = "path"
 description = "Make /tmp directory"
 part_of = ["base.target"]
 options = { path = "/tmp" }
 
 [tmp.mount]
-type = "mount"
 description = "Mount tmpfs on /tmp"
 part_of = ["base.target"]
 depends_on = ["tmp.path"]
 options = { mount_point = "/tmp", fs_type = "tmpfs", options = "defaults", device = "none" }
 
 [tmp-log.path]
-type = "path"
 description = "Make /tmp/log directory"
 part_of = ["base.target"]
 depends_on = ["tmp.mount"]
