--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -102,6 +102,7 @@ add_kernel_submodule(filesystem)
 add_kernel_submodule(interrupt)
 add_kernel_submodule(io)
 add_kernel_submodule(ipc)
+add_kernel_submodule(kmod)
 add_kernel_submodule(lib)
 add_kernel_submodule(misc)
 add_kernel_submodule(mm)
