--- a/userspace/initrd/config/init-config.toml
+++ b/userspace/initrd/config/init-config.toml
@@ -4,7 +4,7 @@
 include = ["bits/*.toml"]
 
 # The default target to boot into
-default_target = "normal.target"
+default_target = "base.target"
 
 [normal.target]
 description = "Normal System"
