--- a/userspace/tests/syslog-test/CMakeLists.txt
+++ b/userspace/tests/syslog-test/CMakeLists.txt
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(syslog-test main.c)
+add_executable(syslog-test main.cpp)
 target_link_libraries(syslog-test PRIVATE libsyslog)
-
 add_to_initrd(TARGET syslog-test /tests)
