--- a/libs/libipc/CMakeLists.txt
+++ b/libs/libipc/CMakeLists.txt
@@ -3,7 +3,8 @@
 add_mos_library(
     NAME libipc
     PUBLIC_INCLUDE_DIRECTORIES
-        ${CMAKE_CURRENT_LIST_DIR}/include
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
+        $<INSTALL_INTERFACE:include>
     SOURCES
         libipc.cpp
 )
