--- a/userspace/libs/argparse/CMakeLists.txt
+++ b/userspace/libs/argparse/CMakeLists.txt
@@ -5,7 +5,7 @@ add_mos_library(
     SOURCES
         libargparse.c
     PUBLIC_INCLUDE_DIRECTORIES
-        ${CMAKE_CURRENT_LIST_DIR}/include
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
     USERSPACE_ONLY
 )
 
