--- a/userspace/tests/librpc/CMakeLists.txt
+++ b/userspace/tests/librpc/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(rpc-test main.c)
-target_link_libraries(rpc-test PRIVATE librpc::server mos::librpc-client)
+target_link_libraries(rpc-test PRIVATE librpc::server librpc::client)
 add_to_initrd(TARGET rpc-test /tests)
